--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=EMS2
 server.port=8080
+server.address=0.0.0.0
 spring.datasource.url=jdbc:mysql://13.235.19.181:3306/EMS2?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
